@@ -2,14 +2,17 @@ package com.proofpoint.event.client;
 
 import com.google.common.base.Preconditions;
 import com.google.common.collect.Lists;
+import com.google.common.collect.Multimap;
 import org.codehaus.jackson.JsonGenerator;
 
 import java.io.IOException;
 import java.lang.reflect.Method;
 import java.util.ArrayDeque;
+import java.util.Collection;
 import java.util.Comparator;
 import java.util.Deque;
 import java.util.List;
+import java.util.Map;
 
 import static com.google.common.base.Objects.firstNonNull;
 import static com.proofpoint.event.client.EventDataType.validateFieldValueType;
@@ -24,14 +27,25 @@ class EventFieldMetadata
         }
     };
 
+    public static enum ContainerType
+    {
+        ITERABLE, MAP, MULTIMAP;
+
+        @Override
+        public String toString()
+        {
+            return name().toLowerCase();
+        }
+    }
+
     private final String name;
     private final String v1Name;
     private final Method method;
     private final EventDataType eventDataType;
     private final EventTypeMetadata<?> nestedType;
-    private final boolean iterable;
+    private final ContainerType containerType;
 
-    EventFieldMetadata(String name, String v1Name, Method method, EventDataType eventDataType, EventTypeMetadata<?> nestedType, boolean iterable)
+    EventFieldMetadata(String name, String v1Name, Method method, EventDataType eventDataType, EventTypeMetadata<?> nestedType, ContainerType containerType)
     {
         Preconditions.checkArgument((eventDataType != null) || (nestedType != null), "both eventDataType and nestedType are null");
         Preconditions.checkArgument((eventDataType == null) || (nestedType == null), "both eventDataType and nestedType are set");
@@ -41,7 +55,7 @@ class EventFieldMetadata
         this.method = method;
         this.eventDataType = eventDataType;
         this.nestedType = nestedType;
-        this.iterable = iterable;
+        this.containerType = containerType;
     }
 
     @SuppressWarnings("ThrowableResultOfMethodCallIgnored") // IDEA-74322
@@ -69,9 +83,17 @@ class EventFieldMetadata
         Object value = getValue(event);
         if (value != null) {
             jsonGenerator.writeFieldName(name);
-            if (iterable) {
+            if (containerType == ContainerType.ITERABLE) {
                 validateFieldValueType(value, Iterable.class);
                 writeArray(jsonGenerator, (Iterable<?>) value, objectStack);
+            }
+            else if (containerType == ContainerType.MAP) {
+                validateFieldValueType(value, Map.class);
+                writeMap(jsonGenerator, (Map<?, ?>) value, objectStack);
+            }
+            else if (containerType == ContainerType.MULTIMAP) {
+                validateFieldValueType(value, Multimap.class);
+                writeMultimap(jsonGenerator, (Multimap<?, ?>) value, objectStack);
             }
             else {
                 writeFieldValue(jsonGenerator, value, objectStack);
@@ -101,6 +123,28 @@ class EventFieldMetadata
         jsonGenerator.writeEndArray();
     }
 
+    private void writeMap(JsonGenerator jsonGenerator, Map<?, ?> value, Deque<Object> objectStack)
+            throws IOException
+    {
+        jsonGenerator.writeStartObject();
+        for (Map.Entry<?, ?> entry : value.entrySet()) {
+            jsonGenerator.writeFieldName((String) entry.getKey());
+            writeFieldValue(jsonGenerator, entry.getValue(), objectStack);
+        }
+        jsonGenerator.writeEndObject();
+    }
+
+    private void writeMultimap(JsonGenerator jsonGenerator, Multimap<?, ?> value, Deque<Object> objectStack)
+            throws IOException
+    {
+        jsonGenerator.writeStartObject();
+        for (Map.Entry<?, ? extends Collection<?>> entry : value.asMap().entrySet()) {
+            jsonGenerator.writeFieldName((String) entry.getKey());
+            writeArray(jsonGenerator, entry.getValue(), objectStack);
+        }
+        jsonGenerator.writeEndObject();
+    }
+
     private void writeObject(JsonGenerator jsonGenerator, Object value, Deque<Object> objectStack)
             throws IOException
     {
@@ -128,7 +172,7 @@ class EventFieldMetadata
     public void writeFieldV1(JsonGenerator jsonGenerator, Object event)
             throws IOException
     {
-        Preconditions.checkState(!iterable, "iterable fields not supported for JSON V1");
+        Preconditions.checkState(containerType == null, "%s fields not supported for JSON V1", containerType);
         Preconditions.checkState(nestedType == null, "nested types not supported for JSON V1");
         Object value = getValue(event);
         if (value != null) {
